crates/jarl-core/src/lints/expect_null/snapshots/jarl_core__lints__expect_null__tests__fix_output.snap
---
source: crates/jarl-core/src/lints/expect_null/mod.rs
expression: "get_fixed_text(vec![\"expect_equal(x, NULL)\", \"expect_identical(x, NULL)\",\n\"expect_equal(NULL, x)\", \"expect_true(is.null(foo(x)))\",\n\"testthat::expect_true(base::is.null(x))\",], \"expect_null\", None)"
---
OLD:
====
expect_equal(x, NULL)
NEW:
====
expect_null(x)

OLD:
====
expect_identical(x, NULL)
NEW:
====
expect_null(x)

OLD:
====
expect_equal(NULL, x)
NEW:
====
expect_null(x)

OLD:
====
expect_true(is.null(foo(x)))
NEW:
====
expect_null(foo(x))

OLD:
====
testthat::expect_true(base::is.null(x))
NEW:
====
testthat::expect_null(x)
